# advent-of-code25

./: .gitignore  README.md  pyproject.toml
src/aoc25/: __init__.py  __main__.py  arguments.py
src/aoc25/day01/: __main__.py  dial.py
src/aoc25/day02/: __main__.py  validation.py
src/aoc25/day03/: __main__.py
src/aoc25/day04/: __main__.py  grid.py
src/aoc25/day05/: __main__.py
src/aoc25/day06/: __main__.py
src/aoc25/day07/: __main__.py  grid.py
tests/: example_test.py  regression_test.py
tests/day01/: day01_test.py  dial_test.py
tests/day02/: day02_test.py
tests/day03/: joltage_test.py
tests/day04/: grid_test.py
tests/example_inputs/: answers.json
