[project]
name = "aoc25"
version = "0.1.0"
description = "Advent of Code 2025 solutions in Python"
readme = "README.md"
authors = [{ name = "Jonathan Wehrle", email = "jonathan@pengubytes.de" }]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
